# breach-tracker

./: .gitignore  Cargo.toml  README.md
migrations/2023-02-18-023646_create_breach_data/: down.sql  up.sql
migrations/2023-02-19-051552_last_retrieved/: down.sql  up.sql
migrations/2023-02-26-105418_AddLinkToBreach/: down.sql  up.sql
migrations/2023-03-04-152224_AddBreachType/: down.sql  up.sql
migrations/2023-03-07-004524_LocalAffectedAndTotalAffected/: down.sql  up.sql
src/: data.rs  datamodels.rs  dto.rs  main.rs  schema.rs
src/parsers/: ca_parser.rs  hi_parser.rs  md_parser.rs  mod.rs  or_parser.rs  wa_parser.rs
src/retrievers/: ca.rs  mod.rs  multi_page.rs  or.rs  single_page.rs  wa.rs
