[package]
name = "breach-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["sqlite", "chrono"] }
dotenvy = "0.15.6"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }

